gitops/clusters/apse2/local/platform/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
            - name: config
              mountPath: /app/assets/custom.css
              subPath: custom.css
      volumes:
        - name: config
          configMap:
            name: glance-config
