gitops/clusters/apse2/local/platform/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
spec:
  ingressClassName: nginx
  rules:
    - host: phil.opswork.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
